# antigen-v6

./: .gitignore  Cargo.toml  line_instancing
crates/antigen-core/: Cargo.toml
crates/antigen-core/src/: lib.rs  peano.rs  two_way_channel.rs  world_exchange.rs
crates/antigen-core/src/components/: args.rs  changed.rs  indirect.rs  lazy_component.rs  mod.rs  named_entities.rs  swap_with.rs  tagged_entities.rs  usage.rs
crates/antigen-core/src/traits/: construct.rs  mod.rs  with.rs
crates/antigen-fs/: Cargo.toml
crates/antigen-fs/src/: lib.rs
crates/antigen-rapier3d/: Cargo.toml
crates/antigen-rapier3d/src/: lib.rs
crates/antigen-shambler/: Cargo.toml
crates/antigen-shambler/src/: lib.rs
crates/antigen-wgpu/: Cargo.toml
crates/antigen-wgpu/src/: assemblage.rs  components.rs  compute_pass.rs  lib.rs  render_pass.rs  staging_belt.rs  systems.rs  to_bytes.rs
crates/antigen-winit/: Cargo.toml
crates/antigen-winit/src/: assemblage.rs  components.rs  lib.rs  systems.rs
crates/expression/: Cargo.toml
crates/expression/src/: eval.rs  expression.rs  lib.rs  parse.rs
crates/expression/src/op_types/: add.rs  div.rs  mod.rs  mul.rs  sub.rs  var.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
crates/sandbox/src/demos/: mod.rs
crates/sandbox/src/demos/phosphor/: MECH_GAME  assemblage.rs  components.rs  mod.rs  svg_lines.rs  systems.rs
crates/sandbox/src/demos/phosphor/maps/: interior_face_test_2.map  line_index_test.map  non_manifold_line.map  non_manifold_room.map  sector_weld_test.map
crates/sandbox/src/demos/phosphor/maps/autosave/: interior_face_test_2.1.map  interior_face_test_3.1.map  line_index_test.1.map  lunatic_fringe.1.map
crates/sandbox/src/demos/phosphor/render_passes/: mod.rs
crates/sandbox/src/demos/phosphor/render_passes/beam/: mod.rs
crates/sandbox/src/demos/phosphor/render_passes/compute_line_instances/: mod.rs
crates/sandbox/src/demos/phosphor/render_passes/phosphor/: mod.rs
crates/sandbox/src/demos/phosphor/render_passes/tonemap/: mod.rs
crates/sandbox/src/demos/phosphor/shaders/: beam.wgsl  beam_line.wgsl  beam_mesh.wgsl  line_instances.wgsl  phosphor_decay.wgsl
crates/shambler/: Cargo.toml  api-design
crates/shambler/src/: geo_map.rs
crates/shambler/src/brush/: brush_hulls.rs
crates/shambler/src/face/: face_planes.rs  face_vertices.rs
crates/shambler/src/line/: mod.rs
test-data/maps/: index_align_test.map  interior_face_test.map  interior_face_test_3.map  line_index_test.map  lunatic_fringe.map  non_manifold_line.map
test-data/shaders/: beam.wgsl  phosphor_decay.wgsl  tonemap.wgsl
